...
                'archived',
                filter,
              ),
            ],
          ),
        ),
        const CupertinoListTile(title: Text('Memos:')),
        SizedBox(
          // Keep SizedBox for height constraint
          height: 200,
          child: Padding(
            // Add padding around the list view
            padding: const EdgeInsets.symmetric(
...
